--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
   <div class="wrapper">
     <section class="topSection">
 
-        <button class="topButton">
-          <p>Button 1</p>
-        </button>
+      <button class="topButton">
+        <p>Button 1</p>
+      </button>
+
+      <button class="midButton">
+        <p>Button 2</p>
+      </button>
 
     </section>
 
     <section class="bottomSection">
+
+      <button class="bottomButton">
+        <p>Button 3</p>
+      </button>
 
     </section>
   </div>
